# intervals.py

./: .gitignore  LICENSE  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml
intervals/: __init__.py  interval.py
tests/: test_interval.py
