[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "intervals"
version = "0.1.0"
description = ""
authors = ["Jesse Stricker <git@jessestricker.de>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11" # keep in sync with /.github/workflows/python.yml

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pydocstringformatter = "^0.7.3"
pylint = "^2.17.4"
pytest = "^7.3.2"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.pydocstringformatter]
write = true
max-line-length = 88

[tool.pylint]
disable = ["missing-module-docstring", "missing-function-docstring"]
